Bug 29957 - Weborder_mobile: Quantity is cut off if it is not 1

--- a/skins/weborder_mobile/css/modifiers.css
+++ b/skins/weborder_mobile/css/modifiers.css
@@ -68,7 +68,7 @@
 }
 
 .modifier select {
-    text-indent: .8em;
+    text-indent: .5em;
 }
 
 .modifier .mdf_split::before {
